Fixed borders, neighbours, seed

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,11 @@
-CC = gcc
+CC = mpicc
 CFLAGS = -g -Wall
+LM = -lm
 OBJECTS = parallel_convolution.o utils.o
 EX = filter
 
 $(EX): $(OBJECTS)
-	$(CC) $(CFLAGS) $(OBJECTS) -o $(EX)
+	$(CC) $(CFLAGS) $(OBJECTS) -o $(EX) $(LM)
 
 parallel_convolution.o: parallel_convolution.c
 	$(CC) $(CFLAGS) -c parallel_convolution.c
@@ -16,4 +17,3 @@ utils.o: utils.c
 
 clean:
 	rm -f $(EX) $(OBJECTS)
-
