--- a/mpi/Makefile
+++ b/mpi/Makefile
@@ -5,7 +5,7 @@ OBJECTS = parallel_convolution.o utils.o
 EX = filter
 
 $(EX): $(OBJECTS)
-	$(CC) $(CFLAGS) $(OBJECTS) -o $(EX) $(LM)
+	$(CC) $(CFLAGS) $(OBJECTS) -g -o $(EX) $(LM)
 
 parallel_convolution.o: parallel_convolution.c
 	$(CC) $(CFLAGS) -c parallel_convolution.c
