--- a/mpi_openmp/Makefile
+++ b/mpi_openmp/Makefile
@@ -13,7 +13,10 @@ parallel_convolution.o: parallel_convolution.c
 utils.o: utils.c
 	$(CC) $(CFLAGS) -c utils.c
 
-.PHONY: clean
+.PHONY: clean debug
 
 clean:
 	rm -f $(EX) $(OBJECTS)
+
+debug:
+	mpiexec -n 4 valgrind --track-origins=yes --leak-check=full --show-leak-kinds=all --vgdb-error=1  ./filter 
